--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,10 +1,14 @@
 <% if current_user %>
+  <%= link_to 'Back to all Items', items_path, class: "btn black" %><br><br>
+  <%= link_to "Log Out", log_out_path, class: "btn black" %>
 
+<br>
 <div class="itempage">
-  <%= @item.name %>: <%= @item.amount %>
+  <br><br>
+  <%= @item.name %>: $<%= @item.amount %> -
   <%= link_to "Delete event", item_path(@item),
       :data => {:confirm => "Are you sure you want to delete this item?",
-      :method => "delete"} %>
+      :method => "delete"}, class: "item-specific" %>
 </div>
 <% else %>
   You are not currently logged in.
